# monorepo

./: .gitignore  readme.md
Asteroids/: Asteroids.sln
BugRepro/: BugRepro.sln
Datascapes/: .gitignore  Datascapes.sln  readme.md
GamepadSample/: GamepadSample.csproj  GamepadSample.sln  Program.cs
GitLogParser/: GitLogParser.sln  Program.cs
Glue/: Glue.sln
Super8080/: Super8080.sln
TeamWorks/: TeamWorks.sln
ToDoList/: ToDoList.sln
ToDoList_/: .gitignore  ToDoList.sln
asdef/: CMakeLists.txt  main.cpp  map.txt
cooper/: README.md  go.mod
lucidreams/: readme.md
lucidreams/src/: CMakeLists.txt
lucidreams/src/lucidreams.Common/: CMakeLists.txt
lucidreams/src/lucidreams.Common/Public/lucidreams/: Constants.hpp  Types.hpp
lucidreams/src/lucidreams.Engine.RunRoutine.MainOnly/: CMakeLists.txt
lucidreams/src/lucidreams.System/: CMakeLists.txt
lucidreams/src/lucidreams.System.Win32/: CMakeLists.txt
lucidreams/src/lucidreams.System.Win32/Internal/System/: Win32LibraryProxy.cpp  Win32LibraryProxy.hpp  Win32LibraryProxyFactory.cpp  Win32LibraryProxyFactory.hpp
lucidreams/src/lucidreams.System/Public/lucidreams/System/: ILibraryProxy.hpp  ILibraryProxyFactory.hpp
lucidreams__/code/lucidreams/: CMakeLists.txt
lucidreams__/code/lucidreams/include/lucidreams/: Engine.hpp  ForwardDeclarations.hpp  Types.hpp
lucidreams__/code/lucidreams/include/lucidreams/Interfaces/: IDisplayNameProvider.hpp
lucidreams__/code/lucidreams/include/lucidreams/Utils/: StringFormat.Impl.hpp  StringFormat.hpp  TemplateUtils.hpp
lucidreams__/code/lucidreams/src/: CMakeLists.txt
lucidreams__/code/lucidreams/src/Common/: CMakeLists.txt  EngineException.cpp  EngineException.hpp
lucidreams__/code/lucidreams/src/Engine/: CMakeLists.txt  Engine.RunRoutine.cpp  Engine.cpp  Engine.hpp
lucidreams__/code/lucidreams/src/Rendering/: CMakeLists.txt  IRenderer.hpp  ISurface.cpp  ISurface.hpp  ISurfaceFactory.hpp  ISwapchain.hpp  IViewport.cpp  IViewport.hpp  IViewportManager.cpp  IViewportManager.hpp  RendererFactory.cpp  RendererFactory.hpp  ViewportManagerFactory.cpp  ViewportManagerFactory.hpp
lucidreams__/code/lucidreams/src/Rendering/Vulkan/: CMakeLists.txt  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanDeviceFactory.cpp  VulkanDeviceFactory.hpp  VulkanExports.cpp  VulkanExports.hpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSurfaceFactory.cpp  VulkanSurfaceFactory.hpp  VulkanSwapchain.hpp
lucidreams__/code/lucidreams/src/Rendering/Win32/: CMakeLists.txt  Win32Viewport.WndProc.cpp  Win32Viewport.cpp  Win32Viewport.hpp  Win32ViewportManager.cpp  Win32ViewportManager.hpp
lucidreams__/code/lucidreams/src/System/: CMakeLists.txt  DynamicLibraryManager.cpp  DynamicLibraryManager.hpp  IDynamicLibraryProxy.cpp  IDynamicLibraryProxy.hpp  Main.Win32.cpp
lucidreams__/code/lucidreams/src/System/Win32/: CMakeLists.txt  Win32DynamicLibraryProxy.cpp  Win32DynamicLibraryProxy.hpp
lucidreams__/code/lucidreams/src/Utils/: Assertion.cpp  Assertion.hpp  CMakeLists.txt  Log.cpp  Log.hpp  StringUtils.cpp  StringUtils.hpp
md2site/: .gitignore  .gitlab-ci.yml
rengine_/rengine/: .gitignore  .gitmodules  CMakeLists.txt
rengine_/rengine/cmake/: FindAssimp.cmake  FindFreetype2.cmake  FindGLFW3.cmake  FindGLM.cmake  FindGlad.cmake  FindJSON.cmake  FindStb.cmake
rengine_/rengine/docs/: Roadmap.md
rengine_/rengine/docs/Development/: DirMapping.md
rengine_/rengine/docs/Development/Input/: InputAccords.md
rengine_/rengine/docs/Development/Rendering/: TextRendering.md
rengine_/rengine/docs/Tasks/: Version_0_1.md  Version_0_2.md
rengine_/rengine/src/: CMakeLists.txt  Main.cpp
rengine_/rengine/src/Common/: CMakeLists.txt  EngineException.cpp  EngineException.hpp  ISingleton.hpp  Log.cpp  Log.hpp
rengine_/rengine/src/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
rengine_/rengine/src/Engine/Commands/: CMakeLists.txt  CommandSystem.cpp  CommandSystem.hpp
rengine_/rengine/src/Engine/Input/: CMakeLists.txt  InputCodes.hpp  InputNames.hpp  InputSystem.cpp  InputSystem.hpp  InputTypes.cpp  InputTypes.hpp
rengine_/rengine/src/EntitySystem/: CMakeLists.txt  Entity.cpp  Entity.hpp
rengine_/rengine/src/Rendering/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.hpp  Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  MeshStorage.cpp  MeshStorage.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderFactory.cpp  ShaderFactory.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Viewport.cpp  Viewport.hpp
rengine_/rengine/src/Rendering/TextRendering/: CMakeLists.txt  Glyph.cpp  Glyph.hpp  TextRenderer.cpp  TextRenderer.hpp
rengine_/rengine/src/Rendering/Texturing/: CMakeLists.txt  Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp  TextureFactory.cpp  TextureFactory.hpp  TextureProxy.cpp
rengine_/rengine/src/Utils/: Assert.cpp  Assert.hpp  CMakeLists.txt  String.cpp  String.hpp  Types.hpp
rengine_/rengine/tests/UserData/: user.json
rengine_/rengine/tests/shaders/: rendering.shader.frag  rendering.shader.vert  text.shader.vert
rengine__/rengine/: .gitmodules  CMakeLists.txt
rengine__/rengine/src/: CMakeLists.txt  main.cpp
rengine__/rengine/src/common/: CMakeLists.txt  engine.cpp  engine.hpp  engineException.cpp  engineException.hpp  log.cpp  log.hpp
rengine__/rengine/src/rendering/: CMakeLists.txt  buffer.cpp  buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
rengine__/rengine/src/scripting/: CMakeLists.txt  apiHost.cpp  apiHost.hpp  nethost.cpp  nethost.hpp
rengine__/rengine/src/system/: CMakeLists.txt  window.cpp  window.hpp
rengine__/rengine/src/utils/: CMakeLists.txt  assert.cpp  assert.hpp  string.cpp  string.hpp  types.hpp
siberianbot.Algorithms/: siberianbot.Algorithms.sln
siberianbot.GenshinImpact.Mockingbird/: .gitignore  siberianbot.GenshinImpact.Mockingbird.sln
siberianbot.Math/: siberianbot.Math.sln
siberianbot.Reversed.Psychonauts/: siberianbot.Reversed.Psychonauts.sln
(+540 files in other folders)
